--- a/style.css
+++ b/style.css
@@ -6,4 +6,10 @@ h1{
 h2{
     color: red;
     background-color: green;
+    text-align: center;
+}
+h3{
+    color: brown;
+    background-color: cadetblue;
+    text-align: center;
 }
